{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 20,
  "lineage": "5902c628-fd43-195f-7dec-2b96fb2ef0c9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cloudethix-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027e239d59fd21cea",
            "association_id": "eipassoc-0eb826f2b0e317653",
            "domain": "vpc",
            "id": "eipalloc-027e239d59fd21cea",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05aea1e0712e9c760",
            "private_dns": "ip-10-0-1-153.ec2.internal",
            "private_ip": "10.0.1.153",
            "public_dns": "ec2-54-157-18-17.compute-1.amazonaws.com",
            "public_ip": "54.157.18.17",
            "public_ipv4_pool": "amazon",
            "tags": {
              "user": "devops"
            },
            "tags_all": {
              "user": "devops"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:509002973204:instance/i-0691490c577f51d2a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0691490c577f51d2a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "3Tier-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04bc9d2dddee03a59",
            "private_dns": "ip-10-0-1-16.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.16",
            "public_ip": "3.94.53.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b33d02c39e5cd9e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c0f7da2a8de5d53d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01969d3cc2e7a42d8",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c0f7da2a8de5d53d"
            ]
          },
          "dependencies": [
            "aws_key_pair.cloudethix-key-pair",
            "aws_security_group.cloudethix-sg-app",
            "aws_subnet.cloudethix-sub-public01",
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudethix-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:internet-gateway/igw-0987000ff737ea1fd",
            "id": "igw-0987000ff737ea1fd",
            "owner_id": "509002973204",
            "tags": {
              "user": "devops"
            },
            "tags_all": {
              "user": "devops"
            },
            "vpc_id": "vpc-039835564e22c4c18"
          },
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cloudethix-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027e239d59fd21cea",
            "connectivity_type": "public",
            "id": "nat-02ecf7888db732658",
            "network_interface_id": "eni-05aea1e0712e9c760",
            "private_ip": "10.0.1.153",
            "public_ip": "54.157.18.17",
            "subnet_id": "subnet-01969d3cc2e7a42d8",
            "tags": {
              "user": "devops"
            },
            "tags_all": {
              "user": "devops"
            }
          },
          "dependencies": [
            "aws_eip.cloudethix-eip",
            "aws_subnet.cloudethix-sub-public01",
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "cloudethix-route-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09fac4c2f72073c6a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02ecf7888db732658",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09fac4c2f72073c6a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.cloudethix-nat",
            "aws_route_table.cloudethix-RT-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "cloudethix-route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0987000ff737ea1fd",
            "id": "r-rtb-05d806d52a01c09a01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d806d52a01c09a0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cloudethix-igw",
            "aws_route_table.cloudethix-RT-public",
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloudethix-RT-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:route-table/rtb-09fac4c2f72073c6a",
            "id": "rtb-09fac4c2f72073c6a",
            "owner_id": "509002973204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02ecf7888db732658",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "user": "devops"
            },
            "tags_all": {
              "user": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-039835564e22c4c18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloudethix-RT-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:route-table/rtb-05d806d52a01c09a0",
            "id": "rtb-05d806d52a01c09a0",
            "owner_id": "509002973204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0987000ff737ea1fd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "user": "devops"
            },
            "tags_all": {
              "user": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-039835564e22c4c18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloudethix-RTASS-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014ef7e1412a92a40",
            "route_table_id": "rtb-09fac4c2f72073c6a",
            "subnet_id": "subnet-07b18ee811179a3d9"
          },
          "dependencies": [
            "aws_vpc.cloudethix-vpc",
            "aws_route_table.cloudethix-RT-private",
            "aws_subnet.cloudethix-sub-private01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloudethix-RTASS-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019327f2a45582524",
            "route_table_id": "rtb-05d806d52a01c09a0",
            "subnet_id": "subnet-01969d3cc2e7a42d8"
          },
          "dependencies": [
            "aws_route_table.cloudethix-RT-public",
            "aws_subnet.cloudethix-sub-public01",
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudethix-sg-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:security-group/sg-0c0f7da2a8de5d53d",
            "description": "Allow app inbound traffic",
            "egress": [],
            "id": "sg-0c0f7da2a8de5d53d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "app from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_app",
            "name_prefix": "",
            "owner_id": "509002973204",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-039835564e22c4c18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudethix-sub-private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:subnet/subnet-07b18ee811179a3d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b18ee811179a3d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509002973204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "user": "devops"
            },
            "tags_all": {
              "user": "devops"
            },
            "vpc_id": "vpc-039835564e22c4c18"
          },
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudethix-sub-private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:subnet/subnet-0fbe521f58bd7048d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbe521f58bd7048d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509002973204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "user": "devops"
            },
            "tags_all": {
              "user": "devops"
            },
            "vpc_id": "vpc-039835564e22c4c18"
          },
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudethix-sub-public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:subnet/subnet-01969d3cc2e7a42d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01969d3cc2e7a42d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509002973204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "user": "devops"
            },
            "tags_all": {
              "user": "devops"
            },
            "vpc_id": "vpc-039835564e22c4c18"
          },
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudethix-sub-public02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:subnet/subnet-019272d7a19889cfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019272d7a19889cfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509002973204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "user": "devops"
            },
            "tags_all": {
              "user": "devops"
            },
            "vpc_id": "vpc-039835564e22c4c18"
          },
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudethix-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:vpc/vpc-039835564e22c4c18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0206e44ea268541cb",
            "default_route_table_id": "rtb-09a960ba117cda772",
            "default_security_group_id": "sg-048a932896ddc04f6",
            "dhcp_options_id": "dopt-088ab15e258363a8d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-039835564e22c4c18",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a960ba117cda772",
            "owner_id": "509002973204",
            "tags": {
              "user": "devops"
            },
            "tags_all": {
              "user": "devops"
            }
          }
        }
      ]
    }
  ]
}